<resources>
    <string name="app_name" translatable="false">Cucina</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="cafe_on">"Кафе на "</string>
    <string name="order_here">Заказать здесь</string>
    <string name="complain">Оставить жалобу</string>

    <string name="tab_text_1">Готовые меню</string>
    <string name="tab_text_2">Одиночно</string>

    <string name="reg_info_header"><u>Почему именно мы?</u></string>

    <string name="settings">Настройки</string>
    <string name="theme">Светлая</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="app">Приложение</string>
    <string name="account">Аккаунт</string>
    <string name="enter_name">Введите новое имя</string>
    <string name="change_name">Изменить имя пользователя</string>
    <string name="enter_password">Введите новый пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="other">Прочее</string>
    <string name="bug_report">Отчёт об ошибках</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="version">Версия</string>

    <string name="registration">Регистрация</string>
    <string name="your_name">Ваше Имя</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password">Пароль</string>
    <string name="conf_password">Подтвердите Пароль</string>
    <string name="accept_ut">Я принимаю условия пользовательского соглашения</string>
    <string name="conf_register">Зарегистрироваться</string>

    <string name="info1">Самая продвинутая пиццерия в Украине</string>
    <string name="info2">Самая удобная пиццерия в Украине</string>
    <string name="info3">Самая вкусная пицца в Украине</string>
    <string name="info4">Самое удобное приложение пиццерии в Украине</string>
    <string name="info5">Самые демократичные цены в Украине</string>
    <string name="info6">Да и потом, вот ему\nбудет скучно без вас :(\nНеужели вы хотите заставить его грустить?</string>
    <string name="greeting">Привет!\nДавай знакомиться</string>

    <string name="auth">Авторизация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="conf_auth">Войти</string>

    <string name="light">Светлая</string>
    <string name="dark">Тёмная</string>
    <string name="system">Системная</string>
    <string name="theme_title">Тема</string>

    <string name="order">Заказать</string>
    <string name="nearby">Кафе поблизости</string>
    <string name="news">Новости</string>

    <string name="reg_link">Не зарегистрированы?\n <font color="#1E88E5">Создайте аккаунт сейчас!</font> </string>

    <string name="schedule">График работы:\n<b>09:00 - 21:00</b>\nБез выходных</string>
    <string name="opened">Мы открыты!</string>
    <string name="closed">Увы, заведение не работает</string>

    <string name="press_again">Нажмите ещё раз для выхода</string>

    <string name="goto_sett">В настройки</string>
    <string name="gps_notification">Похоже, у вас отключено определение местоположения. \n\nПожалуйста, включите его в настройках для продолжения работы приложения.</string>

    <string name="info7">Поспешите и присоединяйтесь к нашей дружной семье! Это займет не больше пары минут;)</string>

    <string name="notify_changes">Изменения вступят в силу после перезапуска приложения</string>
    <string name="your_phone">Ваш телефон</string>
    <string name="logout">Выйти</string>

    <string-array name="themes_arr">
        <item>@string/light</item>
        <item>@string/dark</item>
        <item>@string/system</item>
    </string-array>

    <string-array name="entry_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="city_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="kyiv">Киев</string>
    <string name="kharkiv">Харьков</string>
    <string name="lviv">Львов</string>
    <string name="dnipro">Днепр</string>
    <string name="odesa">Одесса</string>
    <string name="ivfr">Ивано-Франковск</string>
    <string name="kherson">Херсон</string>

    <string-array name="cities">
        <item>@string/kyiv</item>
        <item>@string/kharkiv</item>
        <item>@string/lviv</item>
        <item>@string/dnipro</item>
        <item>@string/odesa</item>
        <item>@string/ivfr</item>
        <item>@string/kherson</item>
    </string-array>

    <string name="logout_conf">Вы уверены, что хотите выйти из учётной записи?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->

    <string name="tab_text_3">Польз. меню</string>
    <string name="my_orders">Мои заказы</string>
    <string name="change_phone">Изменить номер телефона</string>
    <string name="enter_new_phone">Введите новый номер телефона</string>
    <string name="change_city">Изменить город</string>
    <string name="enter_new_city">Выберите новый город из списка</string>
    <string name="describe_problem">Опишите свою проблему здесь</string>
    <string name="waiting_state">В ожидании</string>
    <string name="preparing_state">Идёт приготовление</string>
    <string name="ready_state">Готово</string>
    <string name="declined_state">Отклонено</string>
    <string name="state">Состояние:</string>
    <string name="clarification">Уточнения:</string>
    <string name="delete_declined">Удалить отклонённые заказы</string>
    <string name="delete_declined_body">Вы уверены, что хотите удалить отклонённые заказы?</string>
    <string name="empty_phone">Пожалуйста, введите номер телефона</string>
    <string name="empty_password">Пожалуйста, введите пароль</string>
    <string name="empty_name">Пожалуйста, введите имя</string>
    <string name="incorrect_auth">Неверно введён номер телефона или пароль</string>
    <string name="success_auth">Авторизация прошла успешно</string>
    <string name="your_city">Ваш город</string>
    <string name="delete_user_menu">Удалить пользовательское меню?</string>
    <string name="delete_user_menu_body">Вы уверены, что хотите удалить польз. меню</string>
    <string name="removed_dish_detected">Обнаружены удалённые блюда</string>
    <string name="removed_dish_body">Похоже в вашем пользовательском меню имеются удалённые блюда. Нажмите кнопку ОК что бы удалить их.</string>
    <string name="add_in_user_menu">Добавьте блюда в своё польз. меню</string>
    <string name="enter_user_menu_name">Введите название вашего меню</string>
    <string name="make_route">Проложить маршрут</string>
    <string name="desc_problem">Опишите проблему</string>
    <string name="write_here">Пишите здесь</string>
    <string name="complaint_posted_msg">Ваша жалоба успешно опубликована</string>
    <string name="choose_from_map">Выберите кафе из доступных на карте</string>
    <string name="chosen">Выбрано: </string>
    <string name="nothing">ничего</string>
    <string name="password_alert">В пароле могут использоваться только латинские символы, цифры и подчеркивания</string>
    <string name="phone_alert1">Проверьте корректность ввода номера телефона</string>
    <string name="phone_alert2">В номере телефона могут использоваться только цифры</string>
    <string name="name_updated">Имя успешно обновлено!</string>
    <string name="network_err">Ошибка подключения! Проверьте интернет-соединение</string>
    <string name="password_updated">Пароль успешно обновлён!</string>
    <string name="city_updated">Город успешно обновлён!</string>
    <string name="cant_change_city">Вы не можете изменить город, пока у вас есть активные заказы!</string>
    <string name="phone_changed">Номер телефона успешно обновлен!</string>
    <string name="has_active_orders">Вы не можете изменить номер телефона, пока у вас есть активные заказы!</string>
    <string name="phone_exists">Введённый вами телефон уже зарегистрирован!</string>
    <string name="takeaway">Работаем на вынос</string>
    <string name="closing">Скоро закрываемся</string>
    <string name="write_sth">Напишите хоть что-нибудь</string>
    <string name="complaint_posted">Ваша жалоба успешно опубликована!</string>
    <string name="price">Цена</string>
    <string name="amount">Количество</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="sqlite_error">Произошла ошибка, повторите позже</string>
    <string name="menu_added">Меню успешно добавлено!</string>
    <string name="successfully_deleted">Успешно удалено</string>
    <string name="address">Адрес заказа:</string>
    <string name="incorrect_phone">Введите корректный номер телефона!</string>
    <string name="incorrect_password">В пароле могут использоваться только латинские символы, цифры и подчеркивания</string>
    <string name="mismatch_passwords">Пароли не совпадают!</string>
    <string name="user_agreement_not_accepted">Вы должны принять условия Пользовательского Соглашения для продолжения регистрации!</string>
    <string name="successful_registration">Регистрация прошла успешно</string>
    <string name="your_order">Ваш заказ</string>
    <string name="conf_order">Подтвердите заказ</string>
    <string name="enter_clar">Введите уточнения к заказу:</string>
    <string name="no_news">Похоже, новых новостей нет</string>
    <string name="order_sent">Ваш заказ успешно отправлен на обработку!</string>
    <string name="user_reached_order_limit">Вы достигли лимита в 5 активных заказов.\nПовторите попытку позже</string>
    <string name="no_user_menus">Похоже, у Вас нет польз. меню</string>
    <string name="no_orders">Похоже, у Вас нет активных заказов</string>
</resources>