<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/app">

        <ListPreference
            android:dialogTitle="@string/choose_theme"
            android:key="change_theme"
            android:entries="@array/themes_arr"
            android:defaultValue="0"
            android:entryValues="@array/entry_values"
            android:title="@string/theme_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account">

        <EditTextPreference
            android:key="change_name"
            android:summary="@string/enter_name"
            android:title="@string/change_name" />

        <EditTextPreference
            android:key="change_password"
            android:inputType="textPassword"
            android:summary="@string/enter_password"
            android:title="@string/change_password"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="expandable"
        android:title="@string/other"
        app:initialExpandedChildrenCount="0">

        <Preference
            android:key="bug_report"
            android:title="@string/bug_report"/>

        <Preference
            android:key="user_agreement"
            android:title="@string/user_agreement"/>

        <Preference
            android:key="version"
            android:title="@string/version"
            android:summary="@string/versionName"/>

    </PreferenceCategory>

</PreferenceScreen>