<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_views">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/order"
            android:title="@string/order"/>

        <item
            android:id="@+id/map"
            android:title="@string/nearby"/>

        <item
            android:id="@+id/user_orders"
            android:title="Мои заказы"/>

        <item
            android:id="@+id/news"
            android:title="@string/news"/>
    </group>

    <item
        android:id="@+id/setts"
        android:title="@string/settings"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"/>

</menu>