<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    tools:context=".fragments.reg_fragments.RegFragment"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/header_strong"
        android:text="@string/registration"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/start_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/header_strong"
                android:drawablePadding="2dp"
                android:hint="@string/your_name"
                android:id="@+id/name_et"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:textColor="@color/header_strong"
                android:inputType="phone"
                android:drawablePadding="2dp"
                android:hint="380XXXXXXXXX"
                android:maxLength="12"
                android:id="@+id/phone_et"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/header_weak"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:layout_marginEnd="15dp"
                android:text="@string/your_city"/>

            <Spinner
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:singleLine="true"
                android:textColor="@color/header_strong"
                android:inputType="textPassword"
                android:drawablePadding="2dp"
                android:hint="@string/password"
                android:id="@+id/pass_et"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/header_strong"
                android:inputType="textPassword"
                android:drawablePadding="2dp"
                android:hint="@string/conf_password"
                android:id="@+id/pass_conf_et"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/header_weak"
                android:text="@string/accept_ut"
                android:id="@+id/checkbox"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/conf_register"
                android:textStyle="bold"
                android:fontFamily="@font/gilroy_bold"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:id="@+id/regBtn"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/loadingPB"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/header_strong"
        android:visibility="invisible"/>

</LinearLayout>