<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="0dp"
    android:id="@+id/scrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.reg_fragments.InfoFragment"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:paddingEnd="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-275dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="top"
            android:id="@+id/img"
            android:src="@drawable/scooter1"
            tools:ignore="RtlSymmetry" />

        <!-- -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/center"
                    android:layout_marginTop="350dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    app:cardCornerRadius="20dp"
                    android:layout_below="@+id/center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/start_bg"
                    android:layout_marginBottom="-20dp"
                    android:layout_marginTop="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/reg_info_header"
                            android:textAlignment="center"
                            android:textSize="26sp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/gilroy_light"
                            android:textColor="@color/header_strong"
                            android:padding="20dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/info1"
                            android:textSize="17sp"
                            android:fontFamily="@font/gilroy_bold"
                            android:textColor="@color/header_strong"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            app:drawableStartCompat="@drawable/ic_info" />

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/info2"
                            android:textSize="17sp"
                            android:fontFamily="@font/gilroy_bold"
                            android:textColor="@color/header_strong"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            app:drawableStartCompat="@drawable/ic_good_news" />

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/info3"
                            android:textSize="17sp"
                            android:fontFamily="@font/gilroy_bold"
                            android:textColor="@color/header_strong"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            app:drawableStartCompat="@drawable/ic_pizza" />

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/info4"
                            android:textSize="17sp"
                            android:fontFamily="@font/gilroy_bold"
                            android:textColor="@color/header_strong"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            app:drawableStartCompat="@drawable/ic_smartphone" />

                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/info5"
                            android:textSize="17sp"
                            android:fontFamily="@font/gilroy_bold"
                            android:textColor="@color/header_strong"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            android:layout_marginBottom="30dp"
                            app:drawableStartCompat="@drawable/ic_money" />

                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/pizza_sad"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:fontFamily="@font/gilroy_light"
                            android:textStyle="italic"
                            android:textColor="@color/header_weak"
                            android:text="@string/info6"
                            android:layout_marginBottom="50dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textAlignment="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/gilroy_bold"
                            android:textColor="@color/colorAccent"
                            android:text="@string/info7"
                            android:layout_marginBottom="75dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>