<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CafeActivity"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@color/layout_background">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:layout_marginBottom="10dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:textColor="@color/header_strong"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedule"
            android:text="@string/schedule"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:textColor="@color/header_weak"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:backgroundTint="@color/green"
            android:id="@+id/order_btn"
            android:textColor="@android:color/white"
            android:text="@string/order_here"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complain"
            android:paddingTop="20dp"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white"
            android:paddingBottom="20dp"/>

    </LinearLayout>

</LinearLayout>