<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    tools:context=".activities.AuthorizationActivity"
    android:background="@color/layout_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/header_strong"
            android:text="@string/auth"
            android:fontFamily="@font/gilroy_bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="18dp"
            app:cardElevation="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/bg_auth_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:hint="380XXXXXXXXX"
                        android:maxLength="12"
                        android:id="@+id/mail_et"
                        android:inputType="phone"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:hint="@string/password"
                        android:id="@+id/pass_et"
                        android:inputType="textPassword"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="?attr/colorControlNormal"
                    android:id="@+id/password_recovery"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/conf_auth"
                    android:textStyle="bold"
                    android:fontFamily="@font/gilroy_bold"
                    android:textSize="18sp"
                    android:paddingTop="10dp"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/loginBtn"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/reg"
            android:bufferType="spannable"
            android:text="@string/reg_link"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/loadingPB"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>